# editor

./: Cargo.toml  TODO.md  config.json  schema.json
src/: editor.rs  editor_config.rs  main.rs  screen.rs  types.rs
