[package]
name = "editor"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bitflags = "2.4.2"
config = { version = "0.14.0", features = ["json"] }
crossterm = { version = "0.27.0", features = ["serde"] }
directories = "5.0.1"
env_logger = "0.11.3"
keyboard-types = "0.7.0"
log = "0.4.21"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"


[features]
# default = ["use_alternate_screen"]
use_alternate_screen = []
